k8s/manifests/dev/namespace-dev.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: haqnow-dev
  labels:
    name: haqnow-dev
    environment: development
